# tinycc

./: .gitignore  CMakeLists.txt  tcc.h  tcc_config.in.h  tccasm.c  tccdbg.c  tccgen.c  tccmacho.c  tcctools.c  x86_64-gen.c  x86_64-link.c
